--- a/config/preferences.conf
+++ b/config/preferences.conf
@@ -1,21 +1,26 @@
-BOOKMARKS_FILE=$HOME/.fzf-wuzzy/config/bookmarks.csv
+# Customization
+DOTFILES_PATH=
 FZF_DEFAULT_OPTS="--cycle --no-scrollbar --reverse"
-GAMES_FILE=$HOME/.fzf-wuzzy/config/games.csv
-MUSIC_PATH=
-NOTE_PATH=
-PROJECTS_PATH=
-SCREENSHOT_PATH=
+SWAY_WALLPAPER_CONF_FILE=
 WALLPAPER_PATH=
 
 # Media
 BOOKS_PATH=
-MOVIES_PATH=
-SHOWS_PATH=
+GAMES_FILE=$HOME/.fzf-wuzzy/config/games.csv
+MOVIES_PATH=$HOME/Videos/Movies
+MUSIC_PATH=$HOME/Music
+SHOWS_PATH=$HOME/Video/Television
+
+# Productivity
+BOOKMARKS_FILE=$HOME/.fzf-wuzzy/config/bookmarks.csv
+NOTE_PATH=$HOME/Documents
+PROJECTS_PATH=$HOME/Projects
+SCREENSHOT_PATH=$HOME/Pictures/Screenshots
 
 # Nintendo Consoles
-GBA_ROMS=
-GAMECUBE_WII_ROMS=
 DS_ROMS=
+GAMECUBE_WII_ROMS=
+GBA_ROMS=
 NES_ROMS=
 SNES_ROMS=
 
@@ -24,6 +29,7 @@ DREAMCAST_ROMS=
 MD_ROMS=
 
 # Sony Consoles
-PSP_ROMS=
 PS2_ROMS=
 PS3_ROMS=
+PSP_ROMS=
+
