More consistency changes

--- a/config/preferences.conf
+++ b/config/preferences.conf
@@ -7,9 +7,9 @@ WALLPAPER_PATH=
 # Media
 BOOKS_PATH=
 GAMES_FILE=$HOME/.fzf-wuzzy/config/games.csv
-MOVIES_PATH=$HOME/Videos/Movies
+FILMS_PATH=$HOME/Videos/Films
 MUSIC_PATH=$HOME/Music
-SHOWS_PATH=$HOME/Video/Television
+TELEVISION_PATH=$HOME/Video/Television
 
 # Productivity
 BOOKMARKS_FILE=$HOME/.fzf-wuzzy/config/bookmarks.csv
