Added some scripts and made each script closer to POSIX compliat

--- a/config/preferences.conf
+++ b/config/preferences.conf
@@ -1,3 +1,6 @@
+# General
+DRIVES_PATH=$HOME/.fzf-wuzzy/config/drives.csv
+
 # Customization
 DOTFILES_PATH=
 FZF_DEFAULT_OPTS="--cycle --no-scrollbar --reverse"
